# geemap

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  start.sh  stop.sh
dataset/: README.md  config.yaml
dataset/cache/: optimized_class_raw.tif  optimized_class_rgb.tif  optimized_uncertainty_mask.tif
src/: main.py  state.py  validator.py
src/step1/: app.py  utils.py
src/step2/: README.md  app.py  optimize_data.py  server.py  unified_server.py
src/step2/debug/: check_data.py  debug_plot.py  inspect_data.py
